Mise à jour algorithme